smaller font size for h1(correct) on mobile

--- a/main.css
+++ b/main.css
@@ -100,6 +100,10 @@ h1 {
         font-size: 13px;
     }
 
+    .smaller {
+        font-size: 13px;
+    }
+
     form {
         width: 75%;
     }
